Make purification potion instead of water bottle, stackable
Fix some configs & clean up

--- a/champions/src/main/resources/configs/weapons/standard.yml
+++ b/champions/src/main/resources/configs/weapons/standard.yml
@@ -30,7 +30,7 @@ energy_elixir:
   enabled: true
   cooldown: 12.0
   energyRegen: 0.5
-water_bottle:
+purification_potion:
   enabled: true
   cooldown: 10.0
   duration: 1.5
