--- a/core/src/main/resources/configs/config.yml
+++ b/core/src/main/resources/configs/config.yml
@@ -37,12 +37,9 @@ items:
   hideAttributes: true
   hideEnchants: true
 command:
-  promote:
-    enabled: true
-    requiredRank: ADMIN
   list:
     enabled: true
-    requiredRank: PLAYER
+    requiredRank: PLAYER}
   teleport:
     enabled: true
     requiredRank: ADMIN
@@ -61,9 +58,9 @@ command:
     promote:
       enabled: true
       requiredRank: ADMIN
-  admin:
-    enabled: true
-    requiredRank: ADMIN
+    demote:
+      enabled: true
+      requiredRank: ADMIN
   teleportworld:
     enabled: true
     requiredRank: ADMIN
@@ -73,6 +70,15 @@ command:
   search:
     enabled: true
     requiredRank: ADMIN
+    online:
+      enabled: true
+      requiredRank: ADMIN
+    player:
+      enabled: true
+      requiredRank: ADMIN
+    item:
+      enabled: true
+      requiredRank: ADMIN
   teleporthere:
     enabled: true
     requiredRank: ADMIN
@@ -121,11 +127,167 @@ command:
     give:
       enabled: true
       requiredRank: ADMIN
+    set:
+      enabled: true
+      requiredRank: ADMIN
+    get:
+      enabled: true
+      requiredRank: ADMIN
   iteminfo:
     enabled: true
     requiredRank: ADMIN
-  recipe:
-    minecraft:
-      tnt: false
+  kill:
+    enabled: true
+    requiredRank: PLAYER
+  spawn:
+    enabled: true
+    requiredRank: ADMIN
+  leaderboard:
+    enabled: true
+    requiredRank: PLAYER
+  staffchat:
+    enabled: true
+    requiredRank: ADMIN
+  messageadmin:
+    enabled: true
+    requiredRank: ADMIN
+  replyadmin:
+    enabled: true
+    requiredRank: PLAYER
+  display:
+    enabled: true
+    requiredRank: ADMIN
+    remove:
+      enabled: true
+      requiredRank: ADMIN
+    select:
+      enabled: true
+      requiredRank: ADMIN
+    deselect:
+      enabled: true
+      requiredRank: ADMIN
+    summon:
+      enabled: true
+      requiredRank: ADMIN
+    transform:
+      enabled: true
+      requiredRank: ADMIN
+      scale:
+        enabled: true
+        requiredRank: ADMIN
+      rotate:
+        enabled: true
+        requiredRank: ADMIN
+      translate:
+        enabled: true
+        requiredRank: ADMIN
+    interpolation:
+      enabled: true
+      requiredRank: ADMIN
+  broadcast:
+    enabled: true
+    requiredRank: ADMIN
+  invsee:
+    enabled: true
+    requiredRank: ADMIN
+  customeffect:
+    enabled: true
+    requiredRank: ADMIN
+    give:
+      enabled: true
+      requiredRank: ADMIN
+    clear:
+      enabled: true
+      requiredRank: ADMIN
+  customgive:
+    enabled: true
+    requiredRank: ADMIN
+  reply:
+    enabled: true
+    requiredRank: PLAYER
+  message:
+    enabled: true
+    requiredRank: PLAYER
+  tip:
+    enabled: true
+    requiredRank: ADMIN
+  setviewdistance:
+    enabled: true
+    requiredRank: ADMIN
+  log:
+    enabled: true
+    requiredRank: ADMIN
+    legend:
+      enabled: true
+      requiredRank: ADMIN
+  world:
+    enabled: true
+    requiredRank: ADMIN
+  punish:
+    enabled: true
+    requiredRank: ADMIN
+    add:
+      enabled: true
+      requiredRank: ADMIN
+    remove:
+      enabled: true
+      requiredRank: ADMIN
+    history:
+      enabled: true
+      requiredRank: ADMIN
+  loadpack:
+    enabled: true
+    requiredRank: ADMIN
+  unfreeze:
+    enabled: true
+    requiredRank: ADMIN
+  freeze:
+    enabled: true
+    requiredRank: ADMIN
+  daily:
+    enabled: true
+    requiredRank: PLAYER
+  admin:
+    enabled: true
+    requiredRank: PLAYER
+list:
+  test:
+    - '1'
+    - '2'
+    - '3'
+tab:
+  title: Welcome to Mineplex Clans!
+  website: https://mineplex.com
+  server: Clans-1
+  shop: mineplex.com/shop
+energy:
+  nerf-energy-regen: false
+combat:
+  crit-arrows: false
+server:
+  unlimitedPlayers: false
+  maxPlayers: 150
+combatlog:
+  valuable-items:
+    - TNT
+    - MUSIC_DISC_PIGSTEP
+    - MUSIC_DISC_WAIT
+    - MUSIC_DISC_13
 update-event:
   allow-rollover: false
+spawns:
+  NorthSpawn: world, -8.510855573650886, 181.0, -601.5063510988538, -0.2960205, 1.5005822
+  SouthSpawn: world, -8.49615239736855, 181.0, 600.3614975986515, -179.39966, 1.4999776
+daily:
+  coinsAmount: 250000
+recipe:
+  minecraft:
+    diamond_axe: false
+    diamond_sword: false
+    golden_axe: false
+    golden_sword: false
+    netherite_sword: false
+    netherite_axe: false
+    netherise_pickaxe: false
+    netherite_hoe: false
+    glass_bottle: false
