--- a/progression/src/main/resources/configs/config.yml
+++ b/progression/src/main/resources/configs/config.yml
@@ -1,3 +1,10 @@
+woodcutting:
+  experiencePerWood:
+    DARK_OAK_LOG: 10
+    ACACIA_LOG: 10
+    BIRCH_LOG: 10
+  enabled: true
+
 mining:
   minLeaderboardBlockXp: 45
   xpPerBlock:
