--- a/lunar/src/main/resources/plugin.yml
+++ b/lunar/src/main/resources/plugin.yml
@@ -1,8 +1,9 @@
 author: Moonsworth LLC Development Team, Mykindos
-main: me.mykindos.betterpvp.lunar.LunarClientAPI
+main: me.mykindos.betterpvp.lunar.Lunar
 name: Lunar
-load: STARTUP
+load: POSTWORLD
 version: '1.0'
 api-version: '1.20'
-depend: [Core]
+depend: [Core, Apollo-Bukkit]
+softdepend: [Clans]
 website: https://www.lunarclient.com/
