Implemented Foundation for Woodcutting Progression (#899)
* Added a comment explaining a part of ambiguous code

* Added a migration for Woodcutting to automatically create its table

* Created the 'WoodcuttingHandler' class to contain the logic to handle all the interactions with profession.

* Populated the config yaml file with necessary options for woodcutting profession

* Created new class to listen for whenever a block is broken and notify the WoodcuttingHandler appropriately

* Completely Implemented 'attemptToMineWood' method

* Added a line to betterpvp_global db initial migration to allow 'TOTAL_TREES_CHOPPED' to work with 'progression_properties' table

* Created '/woodcutting' command to be like all the others; not implemented yet

* Integrated Woodcutting Progression Menu into the command

* Removed repository important & usage

* Updated documentation for certain Woodcutting classes

* Fixed an issue with the way that the numbers cast

* Appendend 'L' to numbers in order to fix casting issues

* Instances where the project said 'TOTAL_TREES_CHOPPED' now use 'TOTAL_LOGS_CHOPPED'

* WoodcuttingHandler is now able to save chopped log data to 'progression_woodcutting' table

* Added the 'id' field just like fishing has. You'll sometimes encounter an error where you chop wood at the same location of the same type and it won't get put in db so this fixes that

* Used 'UtilWorld.locationToString' instead of 'Location.toString'

--- a/progression/src/main/resources/configs/config.yml
+++ b/progression/src/main/resources/configs/config.yml
@@ -1,3 +1,10 @@
+woodcutting:
+  experiencePerWood:
+    DARK_OAK_LOG: 10
+    ACACIA_LOG: 10
+    BIRCH_LOG: 10
+  enabled: true
+
 mining:
   minLeaderboardBlockXp: 45
   xpPerBlock:
@@ -219,5 +226,8 @@ command:
     enabled: true
     requiredRank: PLAYER
   mining:
+    enabled: true
+    requiredRank: ADMIN
+  woodcutting:
     enabled: true
     requiredRank: ADMIN
