new thorns branch

--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -195,7 +195,7 @@ skills:
       enabled: true
       maxlevel: 3
       baseDamage: 1.0
-      damageIncreasePerLevel: 1.0
+      damageIncreasePerLevel: 0.0
       baseMaxDamage: 2.0
       baseMaxDamageIncreasePerLevel: 1.0
       expirationTime: 5.0
@@ -252,9 +252,10 @@ skills:
     thorns:
       enabled: true
       maxlevel: 3
-      internalCooldown: 2.0
-      baseDamage: 0.8
-      damageIncreasePerLevel: 0.8
+      hitsToTrigger: 3
+      baseDamage: 3.0
+      damageIncreasePerLevel: 1.0
+      reflectTime: 2.0
     sacrifice:
       enabled: true
       maxlevel: 3
