Created Forest Flourisher perk

--- a/progression/src/main/resources/configs/professions/woodcutting.yml
+++ b/progression/src/main/resources/configs/professions/woodcutting.yml
@@ -8,3 +8,6 @@ skills:
     maxlevel: 20
     cooldown: 20.0
     cooldownDecreasePerLevel: 1.0
+  forest_flourisher:
+    enabled: true
+    maxlevel: 1
