Woodcutting Perk: Forest Flourisher (#927)
* Created Forest Flourisher perk

* Fixed the description and time for growth

* Changed the menu positions

* Added dependency for forest flourisher

* Made all trees work now!

* fixed small bug where you wouldn't get xp; this is b/c setting the block to air isn't the same as naturally breaking and so the game thinks the bottom log of the tree is player placed

--- a/progression/src/main/resources/configs/professions/woodcutting.yml
+++ b/progression/src/main/resources/configs/professions/woodcutting.yml
@@ -8,3 +8,8 @@ skills:
     maxlevel: 20
     cooldown: 20.0
     cooldownDecreasePerLevel: 1.0
+  forest_flourisher:
+    enabled: true
+    maxlevel: 30
+    baseGrowTime: 90.0
+    growTimeDecreasePerLvl: 2.0
