Woodcutting: Forest Flourisher Improvements (#934)
* Moved the claim-checking logic from forestflourisher to a plant-sapling listener in the clans plugin

* Changed the logic of forest flourisher to use a bonemeal-task-timer system instead of generating trees artificially

* Optimized bone mealing w/ queue and small fixes

--- a/progression/src/main/resources/configs/professions/woodcutting.yml
+++ b/progression/src/main/resources/configs/professions/woodcutting.yml
@@ -10,6 +10,5 @@ skills:
     cooldownDecreasePerLevel: 1.0
   forest_flourisher:
     enabled: true
-    maxlevel: 30
-    baseGrowTime: 90.0
-    growTimeDecreasePerLvl: 2.0
+    maxlevel: 250
+    growFactorIncreasePerLvl: 0.003
