Fixed #408 - Overcharge Bar (#944)
* committing overcharge actionbar

* cleaning up code

* changing vals

* tweaked values, still need to be balanced tbh

--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -772,8 +772,8 @@ skills:
       maxlevel: 5
       baseDamage: 1.0
       damageIncreasePerLevel: 0.0
-      baseDuration: 2.4
-      durationDecreasePerLevel: 0.4
+      baseCharge: 15
+      chargeIncreasePerLevel: 10
       baseMaxDamage: 2.0
       maxDamageIncreasePerLevel: 1.0
     huntersthrill:
