changed AI to Vindicator, made it focus one player if theres player within 16 blocks, gave clone speed 2, made the clone leap forward (like ssm) instead of teleport

--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -957,7 +957,10 @@ skills:
       durationIncreasePerLevel: 1.5
       baseHealth : 5.0
       healthIncreasePerLevel: 2.5
-      teleportDistance : 2.0
+      leapStrength : 1.3
+      blindnessLevel : 2
+      slownessLevel : 1
+      effectDuration: 1.0
     bloodcompass:
       enabled: true
       maxlevel: 3
