--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -948,6 +948,21 @@ skills:
       durationIncreasePerLevel: 0.5
       distance: 5
       duration: 2.0
+    clone:
+      enabled: true
+      maxlevel: 5
+      cooldown: 18.0
+      cooldownDecreasePerLevel: 1.0
+      baseHealthReduction: 0.3
+      healthReductionDecreasePerLevel: 0.05
+      baseDuration: 3.0
+      durationIncreasePerLevel: 0.5
+      baseHealth : 10.0
+      healthPerEnemyHit: 1.0
+      leapStrength : 1.3
+      blindnessLevel : 2
+      slownessLevel : 1
+      effectDuration: 1.0
     bloodcompass:
       enabled: true
       maxlevel: 3
