--- a/champions/src/main/resources/configs/weapons/legendaries.yml
+++ b/champions/src/main/resources/configs/weapons/legendaries.yml
@@ -88,3 +88,9 @@ thunderclap_aegis:
   collidePulseRadius: 7.0
   energyOnCollide: 12.5
   chargeDamage: 7.0
+runed_pickaxe:
+  enabled: true
+  baseDamage: 0.0
+  miningSpeed: 28.6
+  energyPerTick: 1.0
+  initialEnergyCost: 0.0
