--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -781,7 +781,7 @@ skills:
       durationIncreasePerLevel: 1.5
       slownessStrength: 4
     longshot:
-      enabled: true
+      enabled: false
       maxlevel: 1
     barrage:
       enabled: true
@@ -793,6 +793,11 @@ skills:
       numArrowsIncreasePerLevel: 3
       arrowDamageIncreasePerLevel: 0.0
       spread: 3.0
+    aerobatics:
+      enabled: true
+      maxLevel: 3
+      damage: 0.5
+      damageIncreasePerLevel: 0.25
     heavyarrows:
       enabled: true
       maxlevel: 3
