--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -793,11 +793,6 @@ skills:
       numArrowsIncreasePerLevel: 3
       arrowDamageIncreasePerLevel: 0.0
       spread: 3.0
-    aerobatics:
-      enabled: true
-      maxLevel: 3
-      damage: 0.5
-      damageIncreasePerLevel: 0.25
     heavyarrows:
       enabled: true
       maxlevel: 3
@@ -830,11 +825,20 @@ skills:
       baseDamage: 0.5
       damageIncreasePerLevel: 0.5
     barbedarrows:
-      enabled: true
+      enabled: false
       maxlevel: 3
       baseDuration: 2.0
       durationIncreasePerLevel: 1.0
       slownessStrength: 2
+    tactician:
+      enabled: true
+      maxlevel: 3
+    aerobatics:
+      enabled: true
+      maxlevel: 3
+    gambit:
+      enabled: true
+      maxlevel: 3
     volley:
       enabled: false
       maxlevel: 5
@@ -892,7 +896,7 @@ skills:
       cooldown: 14.0
       baseSlowDuration: 4.0
       cooldownDecreasePerLevel: 2.0
-      slowDurationIncreasePerLevel: 1.0
+      slowDurationIncreasePerLevel: 0.0
       baseChannelDuration: 1.5
       channelDurationincreasePerLevel: 0.0
       slowStrength: 4
